--- a/WorkoutMaker/src/main/resources/application.properties
+++ b/WorkoutMaker/src/main/resources/application.properties
@@ -23,3 +23,5 @@ spring.jpa.show-sql=false
 spring.jpa.hibernate.ddl-auto=update
 
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
+
+jwt.secret=SUPER.SECRET.STRING
